# shuo

./: .gitignore  CHANGELOG.md  Package.swift  README.md
.cargo/: config.toml
.github/workflows/: release.yml
App/: README.md
App/Sources/: Accessibility.swift  CLI.swift  DoubaoBridge.swift  EngineBridge.swift  FeedbackSounds.swift  HJApp.swift  InputSources.swift  KeyEvents.swift  LatencyBench.swift  Models.swift  RuntimeTimeline.swift  SessionTimeline.swift  SettingsUI.swift  SharedContractCheck.swift  ShuoApp.swift  SubtitleOverlay.swift  TranscriptHistory.swift  Utilities.swift
Bench/Sources/: LatencyBench.swift  Main.swift  Support.swift
Engine/: README.md
Engine/hj-dictation/: Cargo.toml  build.rs
Engine/hj-dictation/src/: app_runtime.rs  backend.rs  config.rs  engine_ipc.rs  frontier_auth.rs  frontier_protocol.rs  input.rs  main.rs  recording_lifecycle.rs  settings_launcher.rs  shortcut.rs  state.rs  ui.rs
Engine/shuo-engine/: Cargo.toml  build.rs
Engine/shuo-engine/scripts/: pkg-config-opus.sh
Engine/shuo-engine/src/: app_runtime.rs  audio.rs  backend.rs  benchmark.rs  config.rs  engine_state.rs  frontier_auth.rs  frontier_transport.rs  legacy_transport.rs  main.rs  recording_lifecycle.rs  settings_launcher.rs  shortcut.rs  status_menu.rs  stdio_engine.rs  subtitle.rs  ui.rs
Packaging/: README.md  build_hj_app.sh  build_shuo_app.sh  install_shuo_app.sh  package_release.sh  split_hj_app_repo.sh
Shared/: README.md
Shared/Fixtures/: context-config.v1.json  ipc.v1.jsonl
configs/: asr_context_profile.sample.json  hj_dictation.context.json  hj_dictation.context.sample.json  probe_input_controller.safe.sample.json  shuo.context.json  shuo.context.sample.json
docs/: LATENCY_BENCH.md
docs/latency-bench/: latest.json
